tests/require/require.exp
Error -------------------------------------------------------------------------------------------------------- E.js:10:1

`exports` may only be used as part of a legal top level export statement [invalid-export]

   10| exports = {stringValue: ''};
       ^^^^^^^


Error ---------------------------------------------------------------------------------------- require-type-error.js:4:8

Property `MyType` is missing in module `./exports-type` [1]. [prop-missing]

   require-type-error.js:4:8
   4| const {MyType} = require('./exports-type');
             ^^^^^^

References:
   require-type-error.js:4:18
   4| const {MyType} = require('./exports-type');
                       ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- require.js:9:14

Cannot call `takesAString` with `A.numberValue` bound to `str` because number [1] is incompatible with string [2].
[incompatible-call]

   require.js:9:14
   9| takesAString(A.numberValue);
                   ^^^^^^^^^^^^^

References:
   A.js:5:23
   5| exports.numberValue = 42;
                            ^^ [1]
   require.js:4:28
   4| function takesAString(str: string): void {}
                                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- require.js:14:14

Cannot call `takesAString` with `B.numberValue` bound to `str` because number [1] is incompatible with string [2].
[incompatible-call]

   require.js:14:14
   14| takesAString(B.numberValue);
                    ^^^^^^^^^^^^^

References:
   B.js:3:23
    3| exports.numberValue = 42;
                             ^^ [1]
   require.js:4:28
    4| function takesAString(str: string): void {}
                                  ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- require.js:25:3

Cannot get `E.stringValue` because property `stringValue` is missing in object literal [1]. [prop-missing]

   require.js:25:3
   25| E.stringValue; // Error: The E exports obj has no 'stringValue' property
         ^^^^^^^^^^^

References:
   E.js:6:18
                        v
    6| module.exports = {
    7|   numberValue: 42
    8| };
       ^ [1]


Error -------------------------------------------------------------------------------------------------- require.js:30:1

The parameter passed to `require` must be a string literal. [unsupported-syntax]

   30| require(a); // Error: Param must be string literal
       ^^^^^^^^^^


Error -------------------------------------------------------------------------------------------------- require.js:32:1

The parameter passed to `require` must be a string literal. [unsupported-syntax]

   32| require(`${'./E'}`); // error: but only if they have no expressions
       ^^^^^^^^^^^^^^^^^^^



Found 7 errors
